feat: implement Reports feature pack with builder functionality
Added a new feature pack for reports that includes a report list and builder interface. The `feature-pack.yaml` was updated to define new routes for `/reports` and `/reports/builder`, leading to the newly created `Reports` and `ReportBuilder` components. The `ReportBuilder` allows users to create and edit reports, while `Reports` displays a list of saved reports, leveraging the dashboard definitions API for data retrieval and storage. Additionally, all necessary TypeScript definitions and supporting files were generated in the `dist` directory for proper module exports and type checking.

Key files changed:
- `feature-pack.yaml`
- `package.json`
- `src/pages/Reports.tsx`
- `src/pages/ReportBuilder.tsx`
- `src/pages/index.ts`

These changes enhance the application's reporting capabilities, enabling users to create, save, and manage reports effectively.

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -1,4 +1,13 @@
 name: reports
-description: A HIT feature pack
-routes: []
+title: Reports
+description: Report list + builder (v0), backed by dashboards storage
+
+routes:
+  - path: /reports
+    page: Reports
+    roles: []
+  - path: /reports/builder
+    page: ReportBuilder
+    roles: []
+
 nav: []
