--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "@hit/feature-pack-reports",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A HIT feature pack",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "default": "./dist/index.js"
+    },
+    "./pages/*": {
+      "types": "./dist/pages/*.d.ts",
+      "import": "./dist/pages/*.js",
+      "require": "./dist/pages/*.js",
+      "default": "./dist/pages/*.js"
+    }
+  },
   "files": [
     "dist",
+    "src",
     "feature-pack.yaml"
   ],
   "scripts": {
@@ -14,9 +29,19 @@
     "dev": "tsc --watch"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "@hit/feature-pack-dashboards": "*",
+    "@hit/ui-kit": "*",
+    "next": "15.5.9",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "@hit/feature-pack-dashboards": "file:../hit-feature-pack-dashboards",
+    "@hit/ui-kit": "file:../hit-ui-kit",
+    "@types/node": "^20",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "next": "^15.5.9",
+    "typescript": "^5"
   }
 }
