refactor: rename reports feature pack to report-core and update dependencies
Renamed the feature pack from 'reports' to 'report-core' in the feature-pack.yaml file to better reflect its purpose as the core reporting functionality. Updated the corresponding description for clarity. Additionally, modified the package-lock.json and package.json files to point to the correct paths for the '@hit/feature-pack-dashboard-core' and '@hit/ui-kit' dependencies, ensuring they reference the latest versions and locations. This change improves the organization of the codebase and enhances dependency management.

--- a/feature-pack.yaml
+++ b/feature-pack.yaml
@@ -1,6 +1,6 @@
-name: reports
+name: report-core
 title: Reports
-description: Report list + builder (v0), backed by dashboards storage
+description: "Report core: list + builder (v0), backed by dashboards storage"
 
 routes:
   - path: /reports
