--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hit/feature-pack-report-core",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A HIT feature pack",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@hit/feature-pack-dashboard-core": "file:../hit-feature-pack-dashboard-core",
-    "@hit/ui-kit": "file:../../packages/hit-ui-kit-ts",
+    "@hit/ui-kit": "file:../../../packages/hit-ui-kit-ts",
     "@types/node": "^20",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
