chore: update package versions in package.json and package-lock.json
Updated the version numbers for the core feature pack from 1.0.10 to 1.0.11 in both package.json and package-lock.json. Additionally, the version of the UI kit has been updated from 1.0.132 to 1.0.135, and the dashboard core package version has been incremented from 1.0.16 to 1.0.21.

The exports field in package.json was also enhanced to include development paths for the main and pages entry points, while the sideEffects property was added and set to false to optimize tree-shaking during the build process. These changes ensure that the project has the latest dependencies and improves the overall build efficiency.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "@hit/feature-pack-report-core",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "A HIT feature pack",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "exports": {
     ".": {
+      "development": "./src/index.ts",
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.js",
       "default": "./dist/index.js"
     },
     "./pages/*": {
+      "development": "./src/pages/*.tsx",
       "types": "./dist/pages/*.d.ts",
       "import": "./dist/pages/*.js",
       "require": "./dist/pages/*.js",
@@ -43,5 +45,6 @@
     "@types/react-dom": "^19.0.0",
     "next": "^15.5.9",
     "typescript": "^5"
-  }
+  },
+  "sideEffects": false
 }
