chore: update package dependencies and versions
Updated package versions in both package.json and package-lock.json to reflect the latest releases. The version for @hit/feature-pack-report-core has been incremented from 1.0.11 to 1.0.12, and the @hit/ui-kit dependency has been updated from 1.0.135 to 1.0.141. Additionally, @hit/feature-pack-dashboard-core has been updated from 1.0.21 to 1.0.25, and optional peer dependencies for @hit/ui-kit and @hit/sdk have been defined in the peerDependenciesMeta section.

These changes ensure that the project is using the latest compatible versions of its dependencies, which may include bug fixes and new features.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hit/feature-pack-report-core",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "A HIT feature pack",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,6 +36,11 @@
     "next": "15.5.9",
     "react": "19.2.3",
     "react-dom": "19.2.3"
+  },
+  "peerDependenciesMeta": {
+    "@hit/ui-kit": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@hit/feature-pack-dashboard-core": "file:../hit-feature-pack-dashboard-core",
